<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_edit_task"
        tools:context=".activities.AddEditTaskActivity"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/basic_indentation">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskNameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                android:layout_marginStart="@dimen/basic_indentation"
                android:layout_marginEnd="@dimen/basic_indentation"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskNoteLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/basic_indentation"
                android:layout_marginEnd="@dimen/basic_indentation"
                app:errorEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNoteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.kotlin.education.android.easytodo.custom_views.MyCustomLayout
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/date"
                app:value="@string/not_set"
                app:image="@drawable/ic_today_black_24dp"
                android:clickable="true"
                android:focusable="true"
                />

        <com.kotlin.education.android.easytodo.custom_views.MyCustomLayout
                android:id="@+id/locationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:header="@string/location"
                app:value="@string/not_set"
                app:image="@drawable/ic_place_black_24dp"
                android:clickable="true"
                android:focusable="true"
        />

        <RelativeLayout
                style="@style/task_detail_item">

            <CheckBox
                    android:id="@+id/notificationCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/top_bottom_indentation"/>
            <TextView
                    style="@style/primary_text"
                    android:text="@string/schedule_notification"
                    android:layout_toEndOf="@id/notificationCheckbox"
                    android:layout_centerVertical="true"/>
            />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_indentation"
                android:layout_marginEnd="@dimen/basic_indentation">
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>