<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_task_detail"
        tools:context=".activities.TaskDetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                style="@style/task_detail_item">

            <TextView
                    style="@style/secondary_text"
                    android:text="@string/task_name"/>
            <TextView
                    android:id="@+id/taskName"
                    style="@style/primary_text"
                    />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/taskNoteContainer"
                style="@style/task_detail_item">

            <TextView
                    style="@style/secondary_text"
                    android:text="@string/note"/>
            <TextView
                    android:id="@+id/taskNote"
                    style="@style/primary_text"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/taskDateContainer"
                style="@style/task_detail_item">

            <TextView
                    style="@style/secondary_text"
                    android:text="@string/date"/>
            <TextView
                    android:id="@+id/taskDate"
                    style="@style/primary_text"
            />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/taskLocationContainer"
                style="@style/task_detail_item">

            <TextView
                    style="@style/secondary_text"
                    android:text="@string/location"/>
            <TextView
                    android:id="@+id/taskLocation"
                    style="@style/primary_text"
            />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/basic_indentation"
                android:layout_marginEnd="@dimen/basic_indentation">
        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>