<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/basic_indentation">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image_source"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/captureWithCamera"
            style="@style/dialog_image_option_container">

        <ImageView
                android:id="@+id/cameraImage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_camera_black_24dp"
                style="@style/dialog_image_option_image"/>

        <TextView
                android:text="@string/capture_image"
                app:layout_constraintLeft_toRightOf="@id/cameraImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/dialog_image_option_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selectFromGallery"
            style="@style/dialog_image_option_container">

        <ImageView
                android:id="@+id/galleryImage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_collections_black_24dp"
                style="@style/dialog_image_option_image"/>

        <TextView
                android:text="@string/select_from_gallery"
                app:layout_constraintLeft_toRightOf="@id/galleryImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/dialog_image_option_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>